--- a/src/views/Layout/admin-sidebar.ejs
+++ b/src/views/Layout/admin-sidebar.ejs
@@ -19,16 +19,14 @@
             </a>
 
             <ul class="side-menu">
-                <li><a href="/index"> <i
+                <li><a href="/admin"> <i
                             class="fas fa-tachometer-alt"></i>Dashboard</a></li>
-                <li><a href="/student"><i
-                            class='fas fa-address-card'></i>Registration</a></li>
-                <li><a href="/exeat"><i
-                            class='fas fa-clipboard-list'></i>Exeat</a></li>
-                <li><a href="/status"><i
-                            class='fas fa-credit-card'></i>Status</a></li>
                 <li><a href="#"><i
-                            class='fas fa-circle-info'></i>Support</a></li>
+                            class='fas fa-code-pull-request'></i>Requests</a></li>
+                <li><a href="#"><i
+                            class='fas fa-user'></i>Student</a></li>
+                <li><a href="#"><i
+                            class='fas fa-cog'></i>Setting</a></li>
 
             </ul>
             <ul class="side-menu out">
@@ -50,7 +48,7 @@
                     </div>
                 </form>
                 <a href="#" class="user">
-                    <%= student %>
+                    <%= admin %>
                 </a>
                 <a href="#" class="notify">
                     <i class="fas fa-bell"></i>
