--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login </title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login </title>
+    </head>
 
-<body>
-    <main>
-        <div class="login-container">
-            <img src="/images/logo.png">
+    <body>
+        <main>
+            <div class="login-container">
+                <img src="/images/logo.png">
 
-            <div class="form-container">
-                <h2>Welcome Back</h2>
-                <form action="/login" method="POST" class="login-form">
-                    <input type="text" name="IdentityNo" placeholder="Identity No" required>
-                    <input type="password" name="password" placeholder="Password" required>
-                    <button>Login</button>
+                <div class="form-container">
+                    <h2>Welcome Back</h2>
+                    <form action="/login" method="POST" class="login-form">
+                        <input type="text" name="IdentityNo"
+                            placeholder="Identity No" required>
+                        <input type="password" name="password"
+                            placeholder="Password" required>
+                        <button>Login</button>
 
-                </form>
+                    </form>
+                </div>
+
             </div>
-
-        </div>
-    </main>
-    <!-- <script src="../assets/script.js"></script> -->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script>
+        </main>
+        <!-- <script src="../assets/script.js"></script> -->
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script>
 
         const select = (e) => document.querySelector(e);
         const selectAll = (e) => document.querySelectorAll(e);
@@ -57,8 +59,10 @@
                     password: password
                 }
             }).then((response) => {
-              console.log(response.data.studentUrl)
-              window.location.href = response.data.studentUrl
+
+              if(response.data.studentUrl) return window.location.href = response.data.studentUrl
+              if(response.data.adminUrl) return window.location.href = response.data.adminUrl
+  
             }).catch((error) => {
                 console.log(error);
             });
@@ -70,6 +74,6 @@
 
 
     </script>
-</body>
+    </body>
 
 </html>
