--- a/src/views/Layout/admin-main-sidebar.ejs
+++ b/src/views/Layout/admin-main-sidebar.ejs
@@ -19,21 +19,19 @@
             </a>
 
             <ul class="side-menu">
-                <li><a href="/index"> <i
+                <li><a href="#"> <i
                             class="fas fa-tachometer-alt"></i>Dashboard</a></li>
-                <li><a href="/student"><i
-                            class='fas fa-address-card'></i>Registration</a></li>
-                <li><a href="/exeat"><i
-                            class='fas fa-clipboard-list'></i>Exeat</a></li>
-                <li><a href="/status"><i
-                            class='fas fa-credit-card'></i>Status</a></li>
                 <li><a href="#"><i
-                            class='fas fa-circle-info'></i>Support</a></li>
+                            class='fas fa-code-pull-request'></i>Admins</a></li>
+                <li><a href="#"><i
+                            class='fas fa-user'></i>Students</a></li>
+                <li><a href="#"><i
+                            class='fas fa-cog'></i>Setting</a></li>
 
             </ul>
             <ul class="side-menu out">
                 <li><a href="/login " class="logout"><i
-                            class='fas fa-arrow-right-from-bracket '></i>Logout</a>
+                            class='fas fa-arrow-right-from-bracket'></i>Logout</a>
                 </li>
             </ul>
         </div>
@@ -48,7 +46,7 @@
                     </div>
                 </form>
                 <a href="#" class="user">
-                    <%= student %>
+                    SYSTEM ADMIN
                 </a>
                 <a href="#" class="notify">
                     <i class="fas fa-bell"></i>
