--- a/src/views/Layout/admin-sidebar.ejs
+++ b/src/views/Layout/admin-sidebar.ejs
@@ -31,7 +31,7 @@
             </ul>
             <ul class="side-menu out">
                 <li><a href="/login " class="logout"><i
-                            class='fas fa-arrow-right-from-bracket '></i>Logout</a>
+                            class='fas fa-arrow-right-from-bracket'></i>Logout</a>
                 </li>
             </ul>
         </div>
@@ -43,12 +43,10 @@
                 <i class="fas fa-bars"></i>
                 <form action>
                     <div class="form-input">
-                        <!-- <input type="search" placeholder="Search....">
-                    <button class="search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button> -->
                     </div>
                 </form>
                 <a href="#" class="user">
-                    <%= admin %>
+                    <%= admin %> <b><%= resInfo[0].residenceName %> Hall</b>
                 </a>
                 <a href="#" class="notify">
                     <i class="fas fa-bell"></i>
