--- a/src/views/Layout/admin-sidebar.ejs
+++ b/src/views/Layout/admin-sidebar.ejs
@@ -23,7 +23,7 @@
                             class="fas fa-tachometer-alt"></i>Dashboard</a></li>
                 <li><a href="#"><i
                             class='fas fa-code-pull-request'></i>Requests</a></li>
-                <li><a href="#"><i
+                <li><a href="/admin-studentReq"><i
                             class='fas fa-user'></i>Student</a></li>
                 <li><a href="#"><i
                             class='fas fa-cog'></i>Setting</a></li>
@@ -46,7 +46,7 @@
                     </div>
                 </form>
                 <a href="#" class="user">
-                    <%= admin %> <b><%= resInfo[0].residenceName %> Hall</b>
+                    <%= admin %> <b><%= resInfo.residenceName %> Hall</b>
                 </a>
                 <a href="#" class="notify">
                     <i class="fas fa-bell"></i>
